[package]
name = "kcptun-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clipboard = "0.5.0"
glium = { version = "0.32.1", default-features = true }
imgui-glium-renderer = "0.9.0"
imgui-winit-support = "0.9.0"
imgui = "0.9"
