[package]
name = "kcptun-ui"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
anyhow = "1.0"
clipboard = "0.5.0"
glium = { version = "0.32.1", default-features = true }
imgui-glium-renderer = "0.9.0"
imgui-winit-support = "0.9.0"
imgui = "0.9"
