[package]
name = "kcptun-ui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
anyhow = "1.0"
clipboard = "0.5.0"
rfd = "0.10.0"
glium = { version = "0.32.1", default-features = true }
imgui-glium-renderer = "0.9.0"
imgui-winit-support = "0.9.0"
imgui = "0.9"
image = "0.24"
tray-item = { git = "https://github.com/fgimian/tray-item-rs.git", branch = "switch-to-windows-rs" }
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
